[package]
name = "vitrine"
version = "0.2.0"
authors = ["Charly Lersteau"]
edition = "2021"
description = "A scriptable static site generator"
repository = "https://github.com/charlyisidore/vitrine"
license = "AGPL-3.0-only"
keywords = ["static", "site", "generator"]
categories = [
    "command-line-utilities",
    "parsing",
    "template-engine",
    "web-programming",
]

[workspace]
members = ["crates/derive"]

[features]
default = ["minijinja", "mlua", "rhai", "tera", "v8"]
minijinja = ["dep:minijinja"]
mlua = ["dep:mlua"]
rhai = ["dep:rhai"]
tera = ["dep:tera"]
v8 = ["dep:v8"]

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "tokio",
] }
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
grass = { version = "0.13.4", default-features = false }
ignore = "0.4.22"
jsx-dom-expressions = { git = "https://github.com/charlyisidore/swc-plugin-jsx-dom-expressions.git", version = "0.1.0" }
lightningcss = { version = "1.0.0-alpha.58", default-features = false, features = [
    "bundler",
    "grid",
] }
lol_html = "1.2.1"
markdown-it = { version = "0.6.1", default-features = false, features = [
    "linkify",
] }
minify-html = "0.15.0"
minijinja = { version = "2.1.2", features = ["loader"], optional = true }
mlua = { version = "0.9.9", features = [
    "lua51",
    "send",
    "serialize",
    "vendored",
], optional = true }
notify-debouncer-full = { version = "0.3.1", default-features = false }
once_cell = "1.19.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
rhai = { version = "1.19.0", features = ["serde", "sync"], optional = true }
serde = "1.0.209"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
slug = "0.1.6"
swc_core = { version = "0.101.6", features = [
    "base",
    "bundler",
    "bundler_node_v1",
    "common",
    "ecma_ast",
    "ecma_codegen",
    "ecma_loader",
    "ecma_parser",
    "ecma_transforms",
    "ecma_transforms_optimization",
    "ecma_transforms_react",
    "ecma_transforms_typescript",
    "ecma_visit",
] }
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
tera = { version = "1.20.0", optional = true }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros", "parsing"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
v8 = { version = "0.104.0", optional = true }
vitrine_derive = { version = "=0.2.0", path = "crates/derive" }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
