[package]
name = "vitrine"
version = "0.3.0-alpha"
authors = ["Charly Lersteau"]
edition = "2024"
description = "Hackable static site generator"
repository = "https://github.com/charlyisidore/vitrine"
license = "AGPL-3.0-only"
keywords = ["static", "site", "generator"]
categories = [
    "command-line-utilities",
    "parsing",
    "template-engine",
    "web-programming",
]

[workspace]
members = ["crates/deno"]

[features]
default = ["deno"]
deno = ["dep:vitrine_deno"]

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
axum = { version = "0.8.4", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.6"
grass = { version = "0.13.4", default-features = false }
ignore = "0.4.23"
iri-string = { version = "0.7.8", features = ["serde"] }
lightningcss = { version = "1.0.0-alpha.67", default-features = false, features = ["bundler"] }
log = "0.4.28"
lol_html = "2.6.0"
markdown-it = { git = "https://github.com/charlyisidore/markdown-it-rust.git", version = "0.6.1" }
minify-html = { git = "https://github.com/charlyisidore/minify-html.git", version = "0.16.4", default-features = false }
minijinja = { version = "2.12.0", features = ["json", "loader", "urlencode"] }
minijinja-contrib = { version = "2.12.0", features = ["datetime", "rand", "wordcount"] }
notify = "8.2.0"
parcel_sourcemap = "2.1.1"
quick-xml = { version = "0.38.3", features = ["serialize"] }
rolldown = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-beta.35", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_norway = "0.9.42"
slug = "0.1.6"
time = { version = "0.3.43", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.47.1", features = ["rt"] }
toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
tower-http = { version = "0.6.6", features = ["fs"] }
vitrine_deno = { version = "0.1.0", path = "crates/deno", optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
