[package]
name = "vitrine_derive"
version = "0.1.0"
authors = ["Charly Lersteau"]
edition = "2021"
description = "Procedural macros for Vitrine"
repository = "https://github.com/charlyisidore/vitrine"
license = "AGPL-3.0-only"
keywords = ["derive", "vitrine"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.38"
