[package]
name = "vitrine_deno"
version = "0.1.0"
edition = "2024"
build = "build.rs"
authors = ["the Deno authors"]
description = "Provides the deno runtime"
license = "MIT"
repository = "https://github.com/charlyisidore/vitrine_deno"
publish = false

[dependencies]
async-trait = "0.1.73"
base64 = "0.22.1"
bincode = "=1.3.3"
boxed_error = "0.2.3"
capacity_builder = "0.5.0"
color-print = "0.3.5"
console_static_text = "=0.8.3"
deno_error = "=0.7.0"
deno_lint = "=0.77.0"
deno_npm = "=0.36.0"
deno_path_util = "=0.6.1"
deno_semver = "=0.9.0"
deno_task_shell = "=0.26.0"
deno_terminal = "=0.2.2"
dotenvy = "0.15.7"
dprint-plugin-json = "=0.20.0"
eszip = "=0.95.0"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
lazy-regex = "3"
libsui = "0.10.0"
once_cell = "1.17.1"
percent-encoding = "2.3.0"
regex = "^1.7.0"
tempfile = "3.4.0"
text_lines = "=0.6.0"
thiserror = "2.0.12"
tokio-util = "0.7.4"
zstd = "=0.13.2"

[dependencies.clap]
version = "4.5.30"
features = ["env", "string", "wrap_help", "error-context"]

[dependencies.deno_ast]
version = "=0.49"
features = ["transpiling", "bundler", "cjs", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit", "utils"]

[dependencies.deno_cache_dir]
version = "=0.24.0"
features = ["sync"]

[dependencies.deno_config]
version = "0.63.0"
features = ["workspace", "sync", "workspace"]

[dependencies.deno_core]
version = "0.355.0"
features = ["include_js_files_for_snapshotting"]

[dependencies.deno_graph]
version = "=0.98.1"
features = ["fast_check"]
default-features = false

[dependencies.deno_lib]
version = "0.31.0"

[dependencies.deno_media_type]
version = "=0.2.9"
features = ["module_specifier", "data_url", "decoding", "module_specifier"]

[dependencies.deno_npm_cache]
version = "0.32.0"

[dependencies.deno_npm_installer]
version = "0.8.0"

[dependencies.deno_package_json]
version = "0.15.0"
features = ["sync"]
default-features = false

[dependencies.deno_resolver]
version = "0.44.0"
features = ["deno_ast", "graph", "sync"]

[dependencies.deno_runtime]
version = "0.221.0"
features = ["include_js_files_for_snapshotting"]

[dependencies.deno_snapshots]
version = "0.28.0"

[dependencies.deno_telemetry]
version = "0.35.0"

[dependencies.import_map]
version = "0.23.0"
features = ["ext"]

[dependencies.indexmap]
version = "2"
features = ["serde"]

[dependencies.jsonc-parser]
version = "0.26.3"
features = ["serde", "cst", "serde"]

[dependencies.log]
version = "0.4.20"
features = ["kv", "serde"]

[dependencies.node_resolver]
version = "0.51.0"
features = ["graph", "sync"]

[dependencies.rustls]
version = "=0.23.28"
features = ["aws_lc_rs", "logging", "std", "tls12"]
default-features = false

[dependencies.serde]
version = "1.0.149"
features = ["derive"]

[dependencies.sys_traits]
version = "=0.1.17"
features = ["getrandom", "filetime", "libc", "real", "strip_unc", "winapi"]

[dependencies.tokio]
version = "1.45.1"
features = ["full"]

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "serde"]

[dependencies.zip]
version = "2.4.1"
features = ["flate2", "deflate-flate2"]
default-features = false

[build-dependencies]
zstd = "=0.13.2"

[features]
hmr = ["deno_runtime/hmr", "deno_snapshots/disable"]

[lib]
path = "lib.rs"
name = "vitrine_deno"
