[package]
name = "vitrine_derive"
version = "0.2.0"
authors = ["Charly Lersteau"]
edition = "2021"
description = "Derive macros for Vitrine"
repository = "https://github.com/charlyisidore/vitrine"
license = "AGPL-3.0-only"
keywords = ["derive", "vitrine"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
